<resources>
    <string name="app_name">Parcial TP3</string>
    <string name="name">Nombre</string>
    <string name="location">Ubicación</string>
    <string name="age">Edad</string>
    <string name="sex">Sex</string>
    <string name="weight">Peso</string>
    <string name="owner">Dueño</string>
    <string name="owner_name">Nombre del dueño</string>
    <string name="to_adopt">Adoptar</string>
    <string name="years">%1$s años</string>
    <string name="error_message_phone_number_not_available">El número de teléfono del dueño no está disponible.</string>
    <string name="night_mode">Modo Oscuro</string>
    <string name="upload_picture">Subir Foto de Perfil</string>
    <string name="user_cellphone">Telefono del Usuario</string>
    <string name="user_name">Nombre del Usuario</string>
    <string name="profile_picture_description">Foto de Perfil</string>
    <string name="welcome">¡BIENVENIDO!</string>
    <string name="login">Iniciar Seccion</string>
    <string name="setting_screen_category">Pantala</string>
    <string name="openNavDrawer">Open Navigation Drawer</string>
    <string name="closeNavDrawer">Close Navigation Drawer</string>
    <string name="Bienvenida">Hola</string>
    <string name="publication_title">Poner en Adopcion</string>
    <string name="publication_name_input">Nombre del Perro</string>
    <string name="publication_age_input">Edad</string>
    <string name="publication_location_input">Ubicacion</string>
    <string name="publication_male_input">Macho</string>
    <string name="publication_female_input">Hembra</string>
    <string name="publication_weight_input">Peso (kg)</string>
    <string name="publication_breed_input">Raza</string>
    <string name="publication_subbreed_input">Subraza</string>
    <string name="publication_urls_input">URLs de imagenes</string>
    <string name="publication_text_input">Descripcion / Comentarios</string>
    <string name="publication_submit">Confirmar</string>
    <string name="fotos_del_perro">Fotos del perro</string>
    <string name="mostrar_bottom_sheet">mostrar bottom sheet</string>
    <string name="adoption_image_description_preview">dog adoption description preview</string>
    <string name="add_to_fav_icon_image">add to fav icon image</string>
    <string name="dog_paw_image_icon">dog paw image icon</string>
    <string name="remove_from_favs_modal_title">Eliminar de favoritos</string>
    <string name="remove_from_favs_modal_text">¿Estás seguro de que deseas eliminar este elemento de favoritos?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="error_message_removing_position_from_favorites">Error while removing item from favorites</string>
    <string name="register">Registrarse</string>
    <string name="delete_acount">Eliminar Cuenta</string>
    <string name="no_elements_found_in_favorites">No se han encontrado elementos en la lista de favoritos</string>
    <string name="no_elements_found_in_adopted">No se han encontrado elementos en la lista de adoptados</string>
    <string name="error_initialization_recycler_view_failed">Error al inicializar el adaptador del RecyclerView: %1$s</string>
    <string name="adoption_confirmation_modal_title">Adoptar</string>
    <string name="adoption_confirmation_modal_text">¿Estás seguro de que desea adoptar?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="publish_adoption">Publicacion de adopcion realizada con exito!</string>
    <string name="dog_adoption">Perro adoptado con exito!</string>
    <string name="url">Ingrese URL de imagen</string>
    <string name="filtros">Filtros</string>
    <string name="shiba">Shiba</string>
    <string name="husky">Husky</string>
    <string name="tervuren">Tervuren</string>
    <string name="boxer">Boxer</string>
    <string name="search">Buscar por raza</string>
</resources>