<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.17" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rigth_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.83" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rigth_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline">


            <ImageView
                android:id="@+id/profile_imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/profile_img"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/profile_picture_description" />

            <TextView
                android:id="@+id/name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:padding="10dp"
                android:textSize="15sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-black"/>

            <TextView
                android:id="@+id/cellphone_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_cellphone"
                android:padding="10dp"
                android:textSize="15sp"
                android:textAlignment="center"
                android:fontFamily="sans-serif-black"/>

            <Button
                android:id="@+id/upload_picture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_picture"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>